plat-480 fixed red cross in error message not showing in IE

--- a/profiles/cr/themes/custom/campaign_base/sass/components/banners/_email-signup.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/banners/_email-signup.scss
@@ -205,7 +205,8 @@ select,
       font-size: 18px;
       box-shadow: none;
       @include border-radius(0);
-      background-size: 40px;
+      // backround-size breaks the background svg on IE, but is needed for chrome
+      -webkit-background-size: 40px;
       padding: 20px 20px 20px 40px;
     }
 
